--- a/14/Dockerfile
+++ b/14/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && \
     sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' && \
     apt-get update && \
     apt-get install -y google-chrome-stable && \
-    apt-remove unzip && \
+    apt-get remove unzip && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
