--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -12,11 +12,13 @@ jobs:
         docker-file:
           - path: .
             file: Dockerfile
+            base-img: node:14
             tags: "14 latest"
             platforms: linux/amd64
 
           - path: .
             file: Dockerfile-slim
+            base-img: node:14-slim
             tags: "14-slim slim"
             platforms: linux/amd64
 
@@ -80,8 +82,10 @@ jobs:
         if: success() && contains(github.ref, 'master')
         with:
           push: true
-          context: ./${{ matrix.docker-file.path }}
-          file: ./${{ matrix.docker-file.path }}/Dockerfile
-          build-args: REFRESHED_AT=$(date +%Y-%m-%d)
+          context: ${{ matrix.docker-file.path }}/
+          file: ${{ matrix.docker-file.path }}/Dockerfile
+          build-args: |
+            REFRESHED_AT=$(date +%Y-%m-%d)
+            BASE_IMAGE=${{ matrix.docker-file.base-img }}
           platforms: ${{ matrix.docker-file.platforms }}
           tags: ${{ steps.prepare.outputs.tags }}
