--- a/activity.yml
+++ b/activity.yml
@@ -1,1 +1,4 @@
-date: 2022-02-05
+# GitHub will automatically disable scheduled workflows when there has been no activity on a repository in 60 days.
+# This file is used to prevent this.
+# Just modify this file sometimes manually.
+date: 2022-04-17
