--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -22,5 +22,7 @@ RUN echo @edge https://dl-cdn.alpinelinux.org/alpine/edge/community >> /etc/apk/
 
 RUN apk add wqy-zenhei --update-cache --repository https://nl.alpinelinux.org/alpine/edge/testing
 
+RUN npm install -g pnpm@latest
+
 ENV CHROME_BIN /usr/bin/chromium-browser
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
